--- a/CCMM/index.html
+++ b/CCMM/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-  <img class="bck-img" src="img/background.jpg"  />
+  <img class="bck-img" src="img/Background.jpg"  />
   <div class="scope"></div>
 <header>
   <img src="img/PerV_Guld_Logo_png.png" alt="Per Vers logo"/>
