--- a/CCMM/index.html
+++ b/CCMM/index.html
@@ -42,8 +42,8 @@
   <!--kodning til video-->
      <div class="player">
        <video controls>
-         <source src="Målløs.wav" type="video/mp4">
-         <source src="Målløs.wav" type="video/webm">
+         <source src="Målløs.mp4" type="video/mp4">
+         <source src="Målløs.mp4" type="video/webm">
          <!-- fallback content here -->
        </video>
        <div class="controls">
